--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,37 @@
-# COVID-19 vaccinations in the UK
+= COVID-19 vaccinations in the UK
+
+This is a https://streamlit.io/[Streamlit^] application that makes it easier to visualise the number of COVID-19 vaccinations done in the UK across different dimensions.
+
+== Getting Started
+
+If you want to try it out, you'll need to first clone the repository:
+
+```
+git clone git@github.com:mneedham/covid-vaccines.git
+cd covid-vaccines
+```
+
+=== Install Dependencies
+
+I use https://pypi.org/project/pipenv/[pipenv^] to manage my projects.
+If you do too, you can install dependencies by running the following command:
+
+```
+pipenv shell
+```
+
+If not, you can install the dependencies using pip directly, as shown below:
+
+```
+pip install pandas streamlit 
+```
+
+=== Running the application
+
+Once you have the dependencies install, you can launch the Streamlit app using the following command:
 
 ```
 streamlit run analyse.py
 ```
 
-Go to http://localhost:8501
+Now, naviage to to http://localhost:8501
