--- a/README.adoc
+++ b/README.adoc
@@ -34,4 +34,4 @@ Once you have the dependencies install, you can launch the Streamlit app using t
 streamlit run analyse.py
 ```
 
-Now, naviage to to http://localhost:8501
+Now, navigate to to http://localhost:8501
