--- a/README.adoc
+++ b/README.adoc
@@ -46,5 +46,6 @@ You should see output similar to the following:
 Now, navigate to http://localhost:8501 to view the app.
 If everything has worked, you should see something like the screenshot below:
 
-
+.Screenshot of Covid Vaccinations app
+image::screenshot.png[title="Screenshot of Covid Vaccinations app"]
 
