--- a/notebooks/Covid Vaccines.ipynb
+++ b/notebooks/Covid Vaccines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "edb423cc",
+   "id": "fce3c756",
    "metadata": {},
    "source": [
     "# Covid Vaccination in England by region and age group"
@@ -10,10 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "a5214309",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RendererRegistry.enable('mimetype')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -21,7 +32,9 @@
     "import pandas as pd\n",
     "import altair as alt\n",
     "import data as dt\n",
-    "from dateutil import parser"
+    "from dateutil import parser\n",
+    "\n",
+    "alt.renderers.enable('mimetype') "
    ]
   },
   {
@@ -38,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "30d08508",
+   "id": "4b52cf5c",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "58a8245f",
+   "id": "c9748776",
    "metadata": {},
    "outputs": [
     {
