--- a/notebooks/Covid Vaccines.ipynb
+++ b/notebooks/Covid Vaccines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fce3c756",
+   "id": "f845f0da",
    "metadata": {},
    "source": [
     "# Covid Vaccination in England by region and age group"
@@ -10,21 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "a5214309",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RendererRegistry.enable('mimetype')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -34,7 +23,7 @@
     "import data as dt\n",
     "from dateutil import parser\n",
     "\n",
-    "alt.renderers.enable('mimetype') "
+    "# alt.renderers.enable('mimetype') "
    ]
   },
   {
@@ -51,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4b52cf5c",
+   "id": "38ae059d",
    "metadata": {},
    "outputs": [
     {
@@ -193,69 +182,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c9748776",
+   "execution_count": 21,
+   "id": "41315e59",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"altair-viz-43c2237baee14d4487fdb8bb79df5141\"></div>\n",
-       "<script type=\"text/javascript\">\n",
-       "  (function(spec, embedOpt){\n",
-       "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-43c2237baee14d4487fdb8bb79df5141\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-43c2237baee14d4487fdb8bb79df5141\");\n",
-       "    }\n",
-       "    const paths = {\n",
-       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
-       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
-       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.8.1?noext\",\n",
-       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
-       "    };\n",
-       "\n",
-       "    function loadScript(lib) {\n",
-       "      return new Promise(function(resolve, reject) {\n",
-       "        var s = document.createElement('script');\n",
-       "        s.src = paths[lib];\n",
-       "        s.async = true;\n",
-       "        s.onload = () => resolve(paths[lib]);\n",
-       "        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "      });\n",
-       "    }\n",
-       "\n",
-       "    function showError(err) {\n",
-       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
-       "      throw err;\n",
-       "    }\n",
-       "\n",
-       "    function displayChart(vegaEmbed) {\n",
-       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
-       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
-       "    }\n",
-       "\n",
-       "    if(typeof define === \"function\" && define.amd) {\n",
-       "      requirejs.config({paths});\n",
-       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-       "    } else if (typeof vegaEmbed === \"function\") {\n",
-       "      displayChart(vegaEmbed);\n",
-       "    } else {\n",
-       "      loadScript(\"vega\")\n",
-       "        .then(() => loadScript(\"vega-lite\"))\n",
-       "        .then(() => loadScript(\"vega-embed\"))\n",
-       "        .catch(showError)\n",
-       "        .then(() => displayChart(vegaEmbed));\n",
-       "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-cca64702265d109feefb064533b4bd66\"}, \"mark\": \"bar\", \"encoding\": {\"color\": {\"type\": \"nominal\", \"field\": \"LTLA Name\", \"legend\": null}, \"row\": {\"type\": \"nominal\", \"field\": \"Age\", \"sort\": [\"index\"], \"title\": null}, \"tooltip\": [{\"type\": \"nominal\", \"field\": \"Age\"}, {\"type\": \"quantitative\", \"field\": \"Percentage\", \"format\": \".2f\"}], \"x\": {\"type\": \"quantitative\", \"field\": \"Percentage\", \"scale\": {\"domain\": [0, 100]}}, \"y\": {\"type\": \"nominal\", \"axis\": {\"labels\": true, \"ticks\": false}, \"field\": \"LTLA Name\", \"sort\": [\"index\"], \"title\": null}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-cca64702265d109feefb064533b4bd66\": [{\"index\": 0, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"Under 45\", \"Percentage\": 22.20290637816672}, {\"index\": 1, \"LTLA Name\": \"Sutton\", \"Age\": \"Under 45\", \"Percentage\": 15.12928787798669}, {\"index\": 2, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"45-49\", \"Percentage\": 74.08933794203669}, {\"index\": 3, \"LTLA Name\": \"Sutton\", \"Age\": \"45-49\", \"Percentage\": 50.45687134502924}, {\"index\": 4, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"50-54\", \"Percentage\": 91.89782709200185}, {\"index\": 5, \"LTLA Name\": \"Sutton\", \"Age\": \"50-54\", \"Percentage\": 81.45217890639954}, {\"index\": 6, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"55-59\", \"Percentage\": 91.88919391065636}, {\"index\": 7, \"LTLA Name\": \"Sutton\", \"Age\": \"55-59\", \"Percentage\": 84.82511704764528}, {\"index\": 8, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"60-64\", \"Percentage\": 93.85937979735954}, {\"index\": 9, \"LTLA Name\": \"Sutton\", \"Age\": \"60-64\", \"Percentage\": 86.38135743398901}, {\"index\": 10, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"65-69\", \"Percentage\": 95.25936104431467}, {\"index\": 11, \"LTLA Name\": \"Sutton\", \"Age\": \"65-69\", \"Percentage\": 88.94893570089334}, {\"index\": 12, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"70-74\", \"Percentage\": 96.78834678834679}, {\"index\": 13, \"LTLA Name\": \"Sutton\", \"Age\": \"70-74\", \"Percentage\": 92.1916388345042}, {\"index\": 14, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"75-79\", \"Percentage\": 97.52781211372064}, {\"index\": 15, \"LTLA Name\": \"Sutton\", \"Age\": \"75-79\", \"Percentage\": 93.18778726198292}, {\"index\": 16, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"80+\", \"Percentage\": 97.48573843228397}, {\"index\": 17, \"LTLA Name\": \"Sutton\", \"Age\": \"80+\", \"Percentage\": 93.35760785611828}]}}, {\"mode\": \"vega-lite\"});\n",
-       "</script>"
-      ],
+      "application/vnd.vegalite.v4+json": {
+       "$schema": "https://vega.github.io/schema/vega-lite/v4.8.1.json",
+       "config": {
+        "view": {
+         "continuousHeight": 300,
+         "continuousWidth": 400
+        }
+       },
+       "data": {
+        "name": "data-cca64702265d109feefb064533b4bd66"
+       },
+       "datasets": {
+        "data-cca64702265d109feefb064533b4bd66": [
+         {
+          "Age": "Under 45",
+          "LTLA Name": "South Derbyshire",
+          "Percentage": 22.20290637816672,
+          "index": 0
+         },
+         {
+          "Age": "Under 45",
+          "LTLA Name": "Sutton",
+          "Percentage": 15.12928787798669,
+          "index": 1
+         },
+         {
+          "Age": "45-49",
+          "LTLA Name": "South Derbyshire",
+          "Percentage": 74.08933794203669,
+          "index": 2
+         },
+         {
+          "Age": "45-49",
+          "LTLA Name": "Sutton",
+          "Percentage": 50.45687134502924,
+          "index": 3
+         },
+         {
+          "Age": "50-54",
+          "LTLA Name": "South Derbyshire",
+          "Percentage": 91.89782709200185,
+          "index": 4
+         },
+         {
+          "Age": "50-54",
+          "LTLA Name": "Sutton",
+          "Percentage": 81.45217890639954,
+          "index": 5
+         },
+         {
+          "Age": "55-59",
+          "LTLA Name": "South Derbyshire",
+          "Percentage": 91.88919391065636,
+          "index": 6
+         },
+         {
+          "Age": "55-59",
+          "LTLA Name": "Sutton",
+          "Percentage": 84.82511704764528,
+          "index": 7
+         },
+         {
+          "Age": "60-64",
+          "LTLA Name": "South Derbyshire",
+          "Percentage": 93.85937979735954,
+          "index": 8
+         },
+         {
+          "Age": "60-64",
+          "LTLA Name": "Sutton",
+          "Percentage": 86.38135743398901,
+          "index": 9
+         },
+         {
+          "Age": "65-69",
+          "LTLA Name": "South Derbyshire",
+          "Percentage": 95.25936104431467,
+          "index": 10
+         },
+         {
+          "Age": "65-69",
+          "LTLA Name": "Sutton",
+          "Percentage": 88.94893570089334,
+          "index": 11
+         },
+         {
+          "Age": "70-74",
+          "LTLA Name": "South Derbyshire",
+          "Percentage": 96.78834678834679,
+          "index": 12
+         },
+         {
+          "Age": "70-74",
+          "LTLA Name": "Sutton",
+          "Percentage": 92.1916388345042,
+          "index": 13
+         },
+         {
+          "Age": "75-79",
+          "LTLA Name": "South Derbyshire",
+          "Percentage": 97.52781211372064,
+          "index": 14
+         },
+         {
+          "Age": "75-79",
+          "LTLA Name": "Sutton",
+          "Percentage": 93.18778726198292,
+          "index": 15
+         },
+         {
+          "Age": "80+",
+          "LTLA Name": "South Derbyshire",
+          "Percentage": 97.48573843228397,
+          "index": 16
+         },
+         {
+          "Age": "80+",
+          "LTLA Name": "Sutton",
+          "Percentage": 93.35760785611828,
+          "index": 17
+         }
+        ]
+       },
+       "encoding": {
+        "color": {
+         "field": "LTLA Name",
+         "legend": null,
+         "type": "nominal"
+        },
+        "row": {
+         "field": "Age",
+         "sort": [
+          "index"
+         ],
+         "title": null,
+         "type": "nominal"
+        },
+        "tooltip": [
+         {
+          "field": "Age",
+          "type": "nominal"
+         },
+         {
+          "field": "Percentage",
+          "format": ".2f",
+          "type": "quantitative"
+         }
+        ],
+        "x": {
+         "field": "Percentage",
+         "scale": {
+          "domain": [
+           0,
+           100
+          ]
+         },
+         "type": "quantitative"
+        },
+        "y": {
+         "axis": {
+          "labels": true,
+          "ticks": false
+         },
+         "field": "LTLA Name",
+         "sort": [
+          "index"
+         ],
+         "title": null,
+         "type": "nominal"
+        }
+       },
+       "mark": "bar"
+      },
       "text/plain": [
-       "alt.Chart(...)"
+       "<VegaLite 4 object>\n",
+       "\n",
+       "If you see this message, it means the renderer has not been properly enabled\n",
+       "for the frontend that you are using. For more information, see\n",
+       "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
