--- a/notebooks/Covid Vaccines.ipynb
+++ b/notebooks/Covid Vaccines.ipynb
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "1966c6bc",
+   "id": "995e578f",
    "metadata": {},
    "outputs": [
     {
@@ -294,10 +294,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929ad314",
+   "id": "a0350627",
    "metadata": {},
    "source": [
-    "![By local areas](images/by_local_areas.png)"
+    "### Vaccination rate by age and local area\n",
+    "<img align=\"left\" src=\"images/by_local_areas.png\">"
    ]
   }
  ],
