--- a/notebooks/Covid Vaccines.ipynb
+++ b/notebooks/Covid Vaccines.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "id": "995e578f",
    "metadata": {},
    "outputs": [
@@ -281,15 +281,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-04-23 18:40:51.874 INFO    tornado.access: 304 GET / (::1) 0.65ms\n",
-      "2021-04-23 18:40:51.883 INFO    tornado.access: 304 GET /vega-lite.js (::1) 1.54ms\n",
-      "2021-04-23 18:40:51.884 INFO    tornado.access: 304 GET /vega-embed.js (::1) 2.40ms\n",
-      "2021-04-23 18:40:51.887 INFO    tornado.access: 304 GET /vega.js (::1) 1.83ms\n"
+      "2021-04-23 18:57:13.977 INFO    tornado.access: 304 GET / (::1) 0.51ms\n",
+      "2021-04-23 18:57:13.987 INFO    tornado.access: 304 GET /vega-lite.js (::1) 1.55ms\n",
+      "2021-04-23 18:57:13.988 INFO    tornado.access: 304 GET /vega-embed.js (::1) 2.47ms\n",
+      "2021-04-23 18:57:13.991 INFO    tornado.access: 304 GET /vega.js (::1) 1.88ms\n"
      ]
     }
    ],
    "source": [
-    "chart.save(\"images/by_local_areas.png\")"
+    "chart.save(\"images/by_local_areas.svg\")"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "metadata": {},
    "source": [
     "### Vaccination rate by age and local area\n",
-    "<img align=\"left\" src=\"images/by_local_areas.png\">"
+    "<img align=\"left\" src=\"images/by_local_areas.svg\">"
    ]
   }
  ],
