--- a/notebooks/Covid Vaccines.ipynb
+++ b/notebooks/Covid Vaccines.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 84,
    "id": "a5214309",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,9 @@
     "import data as dt\n",
     "from dateutil import parser\n",
     "\n",
-    "import seaborn as sns\n"
+    "import logging\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.CRITICAL)"
    ]
   },
   {
@@ -182,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "id": "41315e59",
    "metadata": {},
    "outputs": [
@@ -190,12 +192,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-152b3f796555494899c976fc9366bcd9\"></div>\n",
+       "<div id=\"altair-viz-9eec7c0094804879857972094ed4a84f\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-152b3f796555494899c976fc9366bcd9\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-152b3f796555494899c976fc9366bcd9\");\n",
+       "    if (outputDiv.id !== \"altair-viz-9eec7c0094804879857972094ed4a84f\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-9eec7c0094804879857972094ed4a84f\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -237,20 +239,20 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-e5f3770bd8ccc20e468054595e38a5b2\"}, \"mark\": \"bar\", \"encoding\": {\"color\": {\"type\": \"nominal\", \"field\": \"LTLA Name\", \"legend\": null}, \"row\": {\"type\": \"nominal\", \"field\": \"Age\", \"sort\": [\"index\"], \"title\": null}, \"tooltip\": [{\"type\": \"nominal\", \"field\": \"Age\"}, {\"type\": \"quantitative\", \"field\": \"Percentage\", \"format\": \".2f\"}], \"x\": {\"type\": \"quantitative\", \"field\": \"Percentage\", \"scale\": {\"domain\": [0, 100]}}, \"y\": {\"type\": \"nominal\", \"axis\": {\"labels\": true, \"ticks\": false}, \"field\": \"LTLA Name\", \"sort\": [\"index\"], \"title\": null}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-e5f3770bd8ccc20e468054595e38a5b2\": [{\"index\": 0, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"<45\", \"Percentage\": 22.20290637816672}, {\"index\": 1, \"LTLA Name\": \"Sutton\", \"Age\": \"<45\", \"Percentage\": 15.12928787798669}, {\"index\": 2, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"45-49\", \"Percentage\": 74.08933794203669}, {\"index\": 3, \"LTLA Name\": \"Sutton\", \"Age\": \"45-49\", \"Percentage\": 50.45687134502924}, {\"index\": 4, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"50-54\", \"Percentage\": 91.89782709200185}, {\"index\": 5, \"LTLA Name\": \"Sutton\", \"Age\": \"50-54\", \"Percentage\": 81.45217890639954}, {\"index\": 6, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"55-59\", \"Percentage\": 91.88919391065636}, {\"index\": 7, \"LTLA Name\": \"Sutton\", \"Age\": \"55-59\", \"Percentage\": 84.82511704764528}, {\"index\": 8, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"60-64\", \"Percentage\": 93.85937979735954}, {\"index\": 9, \"LTLA Name\": \"Sutton\", \"Age\": \"60-64\", \"Percentage\": 86.38135743398901}, {\"index\": 10, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"65-69\", \"Percentage\": 95.25936104431467}, {\"index\": 11, \"LTLA Name\": \"Sutton\", \"Age\": \"65-69\", \"Percentage\": 88.94893570089334}, {\"index\": 12, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"70-74\", \"Percentage\": 96.78834678834679}, {\"index\": 13, \"LTLA Name\": \"Sutton\", \"Age\": \"70-74\", \"Percentage\": 92.1916388345042}, {\"index\": 14, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"75-79\", \"Percentage\": 97.52781211372064}, {\"index\": 15, \"LTLA Name\": \"Sutton\", \"Age\": \"75-79\", \"Percentage\": 93.18778726198292}, {\"index\": 16, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"80+\", \"Percentage\": 97.48573843228397}, {\"index\": 17, \"LTLA Name\": \"Sutton\", \"Age\": \"80+\", \"Percentage\": 93.35760785611828}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-d7eb57bb50a1ab36d7b6228ac48dd194\"}, \"mark\": \"bar\", \"encoding\": {\"color\": {\"type\": \"nominal\", \"field\": \"LTLA Name\", \"legend\": null}, \"row\": {\"type\": \"nominal\", \"field\": \"Age\", \"sort\": [\"index\"], \"title\": null}, \"tooltip\": [{\"type\": \"nominal\", \"field\": \"Age\"}, {\"type\": \"quantitative\", \"field\": \"Percentage\", \"format\": \".2f\"}], \"x\": {\"type\": \"quantitative\", \"field\": \"Percentage\", \"scale\": {\"domain\": [0, 100]}}, \"y\": {\"type\": \"nominal\", \"axis\": {\"labels\": true, \"ticks\": false}, \"field\": \"LTLA Name\", \"sort\": [\"index\"], \"title\": null}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-d7eb57bb50a1ab36d7b6228ac48dd194\": [{\"index\": 0, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"<45\", \"Percentage\": 22.20290637816672}, {\"index\": 1, \"LTLA Name\": \"Greenwich\", \"Age\": \"<45\", \"Percentage\": 12.469129438448668}, {\"index\": 2, \"LTLA Name\": \"Sutton\", \"Age\": \"<45\", \"Percentage\": 15.12928787798669}, {\"index\": 3, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"45-49\", \"Percentage\": 74.08933794203669}, {\"index\": 4, \"LTLA Name\": \"Greenwich\", \"Age\": \"45-49\", \"Percentage\": 57.65158806544755}, {\"index\": 5, \"LTLA Name\": \"Sutton\", \"Age\": \"45-49\", \"Percentage\": 50.45687134502924}, {\"index\": 6, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"50-54\", \"Percentage\": 91.89782709200185}, {\"index\": 7, \"LTLA Name\": \"Greenwich\", \"Age\": \"50-54\", \"Percentage\": 72.32051469513087}, {\"index\": 8, \"LTLA Name\": \"Sutton\", \"Age\": \"50-54\", \"Percentage\": 81.45217890639954}, {\"index\": 9, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"55-59\", \"Percentage\": 91.88919391065636}, {\"index\": 10, \"LTLA Name\": \"Greenwich\", \"Age\": \"55-59\", \"Percentage\": 76.3650811669883}, {\"index\": 11, \"LTLA Name\": \"Sutton\", \"Age\": \"55-59\", \"Percentage\": 84.82511704764528}, {\"index\": 12, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"60-64\", \"Percentage\": 93.85937979735954}, {\"index\": 13, \"LTLA Name\": \"Greenwich\", \"Age\": \"60-64\", \"Percentage\": 78.85247098328345}, {\"index\": 14, \"LTLA Name\": \"Sutton\", \"Age\": \"60-64\", \"Percentage\": 86.38135743398901}, {\"index\": 15, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"65-69\", \"Percentage\": 95.25936104431467}, {\"index\": 16, \"LTLA Name\": \"Greenwich\", \"Age\": \"65-69\", \"Percentage\": 82.9610594979245}, {\"index\": 17, \"LTLA Name\": \"Sutton\", \"Age\": \"65-69\", \"Percentage\": 88.94893570089334}, {\"index\": 18, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"70-74\", \"Percentage\": 96.78834678834679}, {\"index\": 19, \"LTLA Name\": \"Greenwich\", \"Age\": \"70-74\", \"Percentage\": 87.13867758923347}, {\"index\": 20, \"LTLA Name\": \"Sutton\", \"Age\": \"70-74\", \"Percentage\": 92.1916388345042}, {\"index\": 21, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"75-79\", \"Percentage\": 97.52781211372064}, {\"index\": 22, \"LTLA Name\": \"Greenwich\", \"Age\": \"75-79\", \"Percentage\": 88.59276863011372}, {\"index\": 23, \"LTLA Name\": \"Sutton\", \"Age\": \"75-79\", \"Percentage\": 93.18778726198292}, {\"index\": 24, \"LTLA Name\": \"South Derbyshire\", \"Age\": \"80+\", \"Percentage\": 97.48573843228397}, {\"index\": 25, \"LTLA Name\": \"Greenwich\", \"Age\": \"80+\", \"Percentage\": 89.09282979004357}, {\"index\": 26, \"LTLA Name\": \"Sutton\", \"Age\": \"80+\", \"Percentage\": 93.35760785611828}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "option = [\"Sutton\", \"South Derbyshire\"]\n",
+    "option = [\"Sutton\", \"South Derbyshire\", \"Greenwich\"]\n",
     "\n",
     "local_area = combined.loc[combined[\"LTLA Name\"].isin(option)].drop([\"LTLA Code\"], axis=1)\n",
     "local_area_absolute = vaccinations.loc[vaccinations[\"LTLA Name\"].isin(option)].drop([\"LTLA Code\"], axis=1)\n",
@@ -273,21 +275,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 88,
    "id": "995e578f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-04-23 18:57:13.977 INFO    tornado.access: 304 GET / (::1) 0.51ms\n",
-      "2021-04-23 18:57:13.987 INFO    tornado.access: 304 GET /vega-lite.js (::1) 1.55ms\n",
-      "2021-04-23 18:57:13.988 INFO    tornado.access: 304 GET /vega-embed.js (::1) 2.47ms\n",
-      "2021-04-23 18:57:13.991 INFO    tornado.access: 304 GET /vega.js (::1) 1.88ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chart.save(\"images/by_local_areas.svg\")"
    ]
