--- a/notebooks/Covid Vaccines.ipynb
+++ b/notebooks/Covid Vaccines.ipynb
@@ -329,7 +329,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1c6b4b9c",
    "metadata": {},
@@ -850,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 212,
    "id": "4c2f9e38",
    "metadata": {},
    "outputs": [
@@ -858,12 +857,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-1479e19066ab44818e5052389aed7ef5\"></div>\n",
+       "<div id=\"altair-viz-8f1d574395ed45179248f8d94d1b9014\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-1479e19066ab44818e5052389aed7ef5\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-1479e19066ab44818e5052389aed7ef5\");\n",
+       "    if (outputDiv.id !== \"altair-viz-8f1d574395ed45179248f8d94d1b9014\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-8f1d574395ed45179248f8d94d1b9014\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -912,7 +911,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,11 +921,22 @@
     "    column: np.float32 \n",
     "    for column in vaccination_rates_by_region.drop([\"Region\"], axis=1).columns\n",
     "})\n",
-    "(alt.Chart(vaccination_rates_by_region).mark_bar().encode(\n",
+    "chart = (alt.Chart(vaccination_rates_by_region).mark_bar().encode(\n",
     "            x=alt.X('Region'),\n",
     "            y=alt.Y('Overall', axis=alt.Axis(title='Vaccinations')),    \n",
     "            tooltip=[alt.Tooltip('Overall', format=\",\")])\n",
-    ".properties(width=600))"
+    ".properties(width=600))\n",
+    "chart.save(\"images/by_region.svg\")\n",
+    "chart"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e0f2bd4",
+   "metadata": {},
+   "source": [
+    "### Vaccination rate by region\n",
+    "<img align=\"left\" src=\"images/by_region.svg\">"
    ]
   },
   {
